<?xml version="1.0" encoding="utf-8"?>

<layout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#B0C4DE"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrationScreen"
                android:textSize="45sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/purple"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColorHint="@color/purple"
                android:inputType="textEmailAddress"
                android:textColor="@color/purple"
                android:autofillHints="@string/Email"
                android:hint="@string/Email"/>

            <EditText
                android:id="@+id/passwordID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColorHint="@color/purple"
                android:inputType="textWebPassword"
                android:textColor="@color/purple"
                android:autofillHints="@string/password"
                android:hint="@string/password"/>

            <EditText
                android:id="@+id/passwordConfirmID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/confirmPassword"
                android:textColorHint="@color/purple"
                android:inputType="textPassword"
                android:autofillHints="@string/password"
                android:textColor="@color/purple"/>


            <Button
                android:id="@+id/registrationButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/Register"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:stateListAnimator="@null"/>

        </LinearLayout>

    </RelativeLayout>

</layout>
